--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 // CONFIG — update these URLs to point to your published Google Sheet CSVs
 // After uploading to Google Sheets: File → Share → Publish to web → CSV
 // ─────────────────────────────────────────────────────────────────────────────
-const COLLEGE_CSV_URL = "YOUR_COLLEGE_STATS_CSV_URL_HERE";
+const COLLEGE_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTGiuaTekEcpysKzsz_cPFKjHgak--D4TnQKKlo8zgyqqTMaym79i3qy7068qZA7ryV0cepeHBNBMbU/pub?output=csv";
 const PRO_CSV_URL     = "YOUR_PRO_STATS_CSV_URL_HERE";
 
 // ─────────────────────────────────────────────────────────────────────────────
