--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 // CONFIG — update these URLs to point to your published Google Sheet CSVs
 // After uploading to Google Sheets: File → Share → Publish to web → CSV
 // ─────────────────────────────────────────────────────────────────────────────
-const COLLEGE_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTGiuaTekEcpysKzsz_cPFKjHgak--D4TnQKKlo8zgyqqTMaym79i3qy7068qZA7ryV0cepeHBNBMbU/pubhtml";
+const COLLEGE_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTGiuaTekEcpysKzsz_cPFKjHgak--D4TnQKKlo8zgyqqTMaym79i3qy7068qZA7ryV0cepeHBNBMbU/pub?output=csv";
 const PRO_CSV_URL     = "YOUR_PRO_STATS_CSV_URL_HERE";
 
 // ─────────────────────────────────────────────────────────────────────────────
@@ -560,19 +560,19 @@ function filterTable(section, filter, btn) {
 // ── Load CSVs ─────────────────────────────────────────────────────────────────
 async function fetchCSV(url) {
     const proxies = [
-        u => `https://corsproxy.io/?${encodeURIComponent(u)}`,
         u => `https://api.allorigins.win/raw?url=${encodeURIComponent(u)}`,
         u => `https://api.codetabs.com/v1/proxy?quest=${encodeURIComponent(u)}`,
+        u => `https://corsproxy.io/?${encodeURIComponent(u)}`,
     ];
     for (const proxy of proxies) {
         try {
             const res = await fetch(proxy(url));
             if (res.ok) {
                 const text = await res.text();
-                if (text.includes(",")) return text; // sanity check it looks like CSV
+                if (text.includes(",")) return text;
             }
         } catch(e) {
-            // try next proxy
+            // try next
         }
     }
     throw new Error("All proxies failed");
