--- a/index.html
+++ b/index.html
@@ -504,8 +504,9 @@ function parseCSV(text) {
   });
 }
 
-// ── Sort state per sub-table ─────────────────────────────────────────────────
+// ── Sort state + row cache (avoids storing JSON in DOM attributes) ───────────
 const sortState = {};
+const rowCache  = {}; // bodyId -> rows array
 
 function lastName(name) {
   const parts = (name || '').trim().split(' ');
@@ -524,45 +525,8 @@ function sortRows(rows, key, dir) {
   });
 }
 
-// ── Render a single sub-table (hitters OR pitchers) ─────────────────────────
-function renderSubTable(headId, bodyId, rows, cols, isCollege, emptyMsg) {
-  const thead = document.getElementById(headId);
-  const tbody = document.getElementById(bodyId);
-
-  if (!rows.length) {
-    thead.innerHTML = '';
-    tbody.innerHTML = `<tr><td colspan="20"><div class="empty-state">${emptyMsg}</div></td></tr>`;
-    return;
-  }
-
-  // Default sort: last name ascending
-  if (!sortState[bodyId]) sortState[bodyId] = { key: 'Name', dir: 'asc' };
-  const { key, dir } = sortState[bodyId];
-  const sorted = sortRows(rows, key, dir);
-
-  // Build header with sortable th elements
-  const makeBaseThs = () => {
-    const playerTh = `<th class="sortable${key==='Name' ? (dir==='asc' ? ' sort-asc' : ' sort-desc') : ''}"
-      data-head="${headId}" data-body="${bodyId}" data-key="Name"
-      data-rows='${encodeURIComponent(JSON.stringify(rows))}'>Player</th>`;
-    if (isCollege) {
-      return playerTh + `<th>Lvl</th><th>Pos</th>`;
-    } else {
-      return playerTh + `<th>Org</th><th>League</th><th>Pos</th>`;
-    }
-  };
-
-  const makeStatThs = () => cols.map(c => {
-    const active = key === c.key;
-    return `<th class="num sortable${active ? (dir==='asc' ? ' sort-asc' : ' sort-desc') : ''}"
-      data-head="${headId}" data-body="${bodyId}" data-key="${c.key}"
-      data-rows='${encodeURIComponent(JSON.stringify(rows))}'>${c.label}</th>`;
-  }).join('');
-
-  thead.innerHTML = `<tr>${makeBaseThs()}${makeStatThs()}</tr>`;
-
-  // Render body
-  tbody.innerHTML = sorted.map(r => {
+function buildRows(sorted, cols, isCollege) {
+  return sorted.map(r => {
     const baseColsHtml = isCollege
       ? `<td>
            <div class="player-name">${r.Name || ''}</div>
@@ -588,8 +552,45 @@ function renderSubTable(headId, bodyId, rows, cols, isCollege, emptyMsg) {
       return `<td class="num ${isHighlight ? 'stat-highlight' : ''}">${val}</td>`;
     }).join('');
 
-    return `<tr data-type="${r.Type}" data-level="${r.Level}">${baseColsHtml}${statCols}</tr>`;
+    return `<tr>${baseColsHtml}${statCols}</tr>`;
   }).join('');
+}
+
+function buildHead(headId, bodyId, cols, isCollege, key, dir) {
+  const s = (colKey) => {
+    const active = key === colKey;
+    const cls = active ? (dir === 'asc' ? ' sort-asc' : ' sort-desc') : '';
+    return `class="sortable${cls}" data-head="${headId}" data-body="${bodyId}" data-key="${colKey}"`;
+  };
+  const playerTh = `<th ${s('Name')}>Player</th>`;
+  const baseThs  = isCollege
+    ? playerTh + `<th>Lvl</th><th>Pos</th>`
+    : playerTh + `<th>Org</th><th>League</th><th>Pos</th>`;
+  const statThs  = cols.map(c =>
+    `<th ${s(c.key)} class="num sortable${key===c.key?(dir==='asc'?' sort-asc':' sort-desc'):''}"
+      data-head="${headId}" data-body="${bodyId}" data-key="${c.key}">${c.label}</th>`
+  ).join('');
+  return `<tr>${baseThs}${statThs}</tr>`;
+}
+
+// ── Render a single sub-table (hitters OR pitchers) ─────────────────────────
+function renderSubTable(headId, bodyId, rows, cols, isCollege, emptyMsg) {
+  const thead = document.getElementById(headId);
+  const tbody = document.getElementById(bodyId);
+
+  if (!rows.length) {
+    thead.innerHTML = '';
+    tbody.innerHTML = `<tr><td colspan="20"><div class="empty-state">${emptyMsg}</div></td></tr>`;
+    return;
+  }
+
+  // Cache rows for sort handler
+  rowCache[bodyId]   = { rows, cols, isCollege };
+  if (!sortState[bodyId]) sortState[bodyId] = { key: 'Name', dir: 'asc' };
+  const { key, dir } = sortState[bodyId];
+
+  thead.innerHTML = buildHead(headId, bodyId, cols, isCollege, key, dir);
+  tbody.innerHTML = buildRows(sortRows(rows, key, dir), cols, isCollege);
 }
 
 // ── Render all four sub-tables for a given level filter ───────────────────────
@@ -675,70 +676,20 @@ document.addEventListener('click', function(e) {
   const headId = th.dataset.head;
   const bodyId = th.dataset.body;
   const key    = th.dataset.key;
-  const rows   = JSON.parse(decodeURIComponent(th.dataset.rows));
+  if (!headId || !bodyId || !key) return;
 
   const prev = sortState[bodyId] || { key: 'Name', dir: 'asc' };
   const dir  = (prev.key === key && prev.dir === 'asc') ? 'desc' : 'asc';
   sortState[bodyId] = { key, dir };
 
-  // Re-render just this sub-table — find its config from the thead
-  // Trigger a re-render by dispatching a custom event
-  document.getElementById(bodyId).dispatchEvent(
-    new CustomEvent('ccb-sort', { detail: { headId, bodyId, rows, key, dir } })
-  );
-});
+  const cached = rowCache[bodyId];
+  if (!cached) return;
+  const { rows, cols, isCollege } = cached;
 
-// Listen for sort events on each tbody
-['collegeHitBody','collegePitBody','proHitBody','proPitBody'].forEach(id => {
-  const el = document.getElementById(id);
-  if (el) el.addEventListener('ccb-sort', function(e) {
-    const { rows } = e.detail;
-    const { key, dir } = sortState[id];
-    const sorted = sortRows(rows, key, dir);
-    // Rebuild just the body rows preserving the existing thead
-    const tbody = document.getElementById(id);
-    const thead = document.getElementById(id.replace('Body','Head'));
-    // Update sort indicators on headers
-    thead.querySelectorAll('th.sortable').forEach(th => {
-      th.classList.remove('sort-asc','sort-desc');
-      if (th.dataset.key === key) th.classList.add(dir === 'asc' ? 'sort-asc' : 'sort-desc');
-    });
-    // Re-render rows
-    const isCollege = id.startsWith('college');
-    const isHitting = id.includes('Hit');
-    const cols = isCollege
-      ? (isHitting ? COL_HIT_COLS : COL_PIT_COLS)
-      : (isHitting ? PRO_HIT_COLS : PRO_PIT_COLS);
-
-    tbody.innerHTML = sorted.map(r => {
-      const baseColsHtml = isCollege
-        ? `<td>
-             <div class="player-name">${r.Name || ''}</div>
-             <div class="player-team">${r.Team || ''}</div>
-           </td>
-           <td><span class="level-badge level-${r.Level}">${r.Level || ''}</span></td>
-           <td><span class="type-badge">${r.Position || ''}</span></td>`
-        : `<td>
-             <div class="player-name">${r.Name || ''}</div>
-             <div class="player-team">${r.Team || ''}</div>
-           </td>
-           <td style="color:var(--muted);font-size:13px">${r.Org || ''}</td>
-           <td style="color:var(--muted);font-size:13px">${r.League || ''}</td>
-           <td><span class="type-badge">${r.Position || ''}</span></td>`;
-
-      const statCols = cols.map(c => {
-        const val = r[c.key] || '—';
-        const isHighlight = (c.key === 'AVG'  && parseFloat(val) >= 0.350)
-                         || (c.key === 'HR'   && parseInt(val)   >= 5)
-                         || (c.key === 'ERA'  && parseFloat(val) <= 2.50 && val !== '—')
-                         || (c.key === 'OPS'  && parseFloat(val) >= 0.900)
-                         || (c.key === 'WHIP' && parseFloat(val) <= 1.10 && val !== '—');
-        return `<td class="num ${isHighlight ? 'stat-highlight' : ''}">${val}</td>`;
-      }).join('');
-
-      return `<tr>${baseColsHtml}${statCols}</tr>`;
-    }).join('');
-  });
+  const thead = document.getElementById(headId);
+  const tbody = document.getElementById(bodyId);
+  thead.innerHTML = buildHead(headId, bodyId, cols, isCollege, key, dir);
+  tbody.innerHTML = buildRows(sortRows(rows, key, dir), cols, isCollege);
 });
 
 // ── Event delegation for filter buttons (avoids WordPress stripping onclick) ──
@@ -754,6 +705,10 @@ document.addEventListener('click', function(e) {
 
 loadData();
 </script>
+
+</body>
+</html>
+
 
 </body>
 </html>
